安全/jumpserver/参考文档/manifest/jumpserver/templates/web/service-web.yaml
---
# Source: jumpserver/templates/web/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: jumpserver-jms-web
  labels:
    app.kubernetes.io/name: jumpserver
    helm.sh/chart: jumpserver-0.1.0
    app.kubernetes.io/instance: jumpserver
    app.kubernetes.io/version: "v2.15.4"
    app.kubernetes.io/managed-by: Helm
    app.jumpserver.org/name: jms-web
  annotations:
    null
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: web
      protocol: TCP
      name: web
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  selector:
    app.kubernetes.io/name: jumpserver
    app.kubernetes.io/instance: jumpserver
    app.jumpserver.org/name: jms-web
